unix/dashboards/argocd-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingress-route
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`argocd.redalf.test`) && PathPrefix(`/`) || Host(`argocd.redalf.de`) && PathPrefix(`/`) 
      kind: Rule
      priority: 12
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.redalf.test`) && Headers(`Content-Type`, `application/grpc`) ||  Host(`argocd.redalf.de`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
