unix/dashboards/traefik_dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  ports:
  - name: traefik-port
    port: 9000
    #nodePort: 31000
    targetPort: 9000
    protocol: TCP

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress-route
  namespace: kube-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(``) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: traefik-dashboard-service
          port: traefik-port
#      middlewares:
#        - name: python-http-cache
#        - name: python-add-trailing-slash
#        - name: python-stripprefix
---
